--- a/BackendNodeServer/package.json
+++ b/BackendNodeServer/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.1.0",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "socket.io": "^2.2.0"
